<?xml version="1.0"?>
<package format="2">
  <name>ros_pub_sub</name>
  <version>0.0.0</version>
  <description>The ros_pub_sub package</description>

  <maintainer email="jorge.luiz.henri@hotmail.com">Jorge Luiz Henriques</maintainer>
  <author email="jorge.luiz.henri@hotmail.com">Jorge Luiz Henriques</author>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>
</package>
